<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/darktext"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_sub"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/darktext"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_body"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/darktext"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_body"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/b_send"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:text="@string/_send"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>